tearchan-horde/src/v2/action/snapshots/tearchan_horde__v2__action__manager__test__zero_time_action-2.snap
---
source: tearchan-horde/src/v2/action/manager.rs
expression: "SnapshotResult::from_result(\"changes\", manager.current_tick(), &result,\n    &manager.validator())"

---
SnapshotResult {
    tag: "changes",
    current_tick: 7,
    move_actions: None,
    jump_actions: None,
    talk_actions: Some(
        [
            Action {
                raw: TalkState,
                entity_id: 2,
                ty: Start {
                    tick: 7,
                    start: 462,
                    end: 1452,
                },
            },
        ],
    ),
}
